Updated SparkApp page with Jun's new example; added example tarball to docs site